Mon Mar 23 17:34:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - data/driver.list, add Eaton Powerware 9130 compatibility with bcmxcp and usbhid-ups.

Sun Mar 22 01:13:18 UTC 2009 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/blazer_usb.c: read data from device until timeout.

Mon Mar 16 22:10:30 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - drivers/bcmxcp.[ch]: Extend alarm map to fix debug crash on PW9130. Driver version 0.22.

Wed Mar 04 19:37:12 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/mge-utalk.c: fix enable_ups_comm()
   (patch from Hans-Werner Paulsen)

Sun Mar 01 19:51:54 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list, drivers/tripplite-hid.c: add HP T750 INTL
   (reported by KP Kirchdoerfer)

Fri Feb 27 09:33:27 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add Mustek PowerMust 424 / 636 / 848 (USB) compatibility
   with blazer_usb (reported by Vitaly Polyakov)

Fri Feb 27 09:07:05 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/apcsmart.[ch]: add APC Matrix 5000, vintage 12/00
   (patch from Jarett Stevens)

Tue Feb 17 22:00:01 UTC 2009 / Arnaud Quette <aquette@debian.org>

 - drivers/Makefile.am: Fix snmp-ups overlinking with lcrypto.
   (Debian Lintian report)

2.4.1

Mon Feb 16 17:41:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: 2.4.1

Mon Feb 16 16:13:47 UTC 2009 / David Goncalves <david@lestat.st>

 - scripts/python/app/NUT-Monitor: Changed version from 1.0 to 1.1. Changed
   the way NUT-Monitor deals with 'ups.status' var to better handle composite
   status (OL + TRIM, OL + CHRG, ...)

Thu Feb 12 13:23:41 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - scripts/udev/Makefile.am, scripts/hal/Makefile.am, scripts/hotplug/Makefile.am,
   Makefile.am: fix the autotools issue with the clean/distclean target removing
   the USB helper files.
